<resources>
    <string name="app_name">AVA</string>
    <string name="app_version">Version 0.0.1</string>
    <string name="copyright">SR Labs™ ©2016–2017</string>
    <string name="changelog1">Changelog</string>
    <string name="changelog2">Coming soon!</string>
    <string name="wc_snack">Its AVA, now have more control &amp; feel comfortable in your home!</string>
    <string name="firstrun_p1_t">Test 1</string>
    <string name="firstrun_p1_b">Test 1 Test 1 Test 1 Test 1 Test 1 Test 1 Test 1 Test 1 Test 1</string>
    <string name="firstrun_p2_t">Test 2</string>
    <string name="firstrun_p2_b">Test 2 Test 2 Test 2 Test 2 Test 2 Test 2 Test 2 Test 2 Test 2</string>
    <string name="firstrun_p3_t">Test 3</string>
    <string name="firstrun_p3_b">Test 3 Test 3 Test 3 Test 3 Test 3 Test 3 Test 3 Test 3 Test 3</string>
    <string name="firstrun_p4_t">Test 4</string>
    <string name="firstrun_p4_b">Test 4 Test 4 Test 4 Test 4 Test 4 Test 4 Test 4 Test 4 Test 4</string>
    <string name="firstrun_p5_t">Test 5</string>
    <string name="firstrun_p5_b">Test 5 Test 5 Test 5 Test 5 Test 5 Test 5 Test 5 Test 5 Test 5</string>
    <string name="firstrun_p6_t">Storage Access</string>
    <string name="firstrun_p6_b">Need permission to access your device storage to store your profile!</string>
    <string name="logout">Log out</string>
    <string name="cont">Continue</string>
    <string name="forgot_p">Forgot password? Click here</string>
    <string name="nm">Nickname:</string>
    <string name="nicname">Nickname</string>
    <string name="eml">E-mail:</string>
    <string name="eml1">E-mail</string>
    <string name="cur_eml">Current E-mail</string>
    <string name="new_eml">New E-mail</string>
    <string name="pass">Password</string>
    <string name="cur_pass">Current Password</string>
    <string name="new_pass">New Password</string>
    <string name="usr">User</string>
    <string name="change_pass">Change Password</string>
    <string name="change_eml">Change E-mail</string>
    <string name="change_nnm">Save &amp; continue</string>
    <string name="user_name_hint">Username</string>
    <string name="error">Something went wrong! Please try again</string>
    <string name="acc">Account</string>
    <string name="account_activity_header">Authorise AVA</string>
    <string name="set">Settings</string>
    <string name="help">Help</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="reg_login">Register • Login</string>
    <string name="cemail">Change your registered E-mail here</string>
    <string name="cpass">Change your account password here</string>
    <string name="cnnm">Enter your nickname here</string>
    <string name="guest_name">Guest</string>
    <string name="guest_email">xyz@xyz.com</string>
    <string name="home_c">Controls</string>
    <string name="home_s">Sensors</string>
    <string name="home_a">Home</string>
    <string name="no_a">Your smart home appears here</string>
    <string name="no_c">You can get all controls for your smart home here</string>
    <string name="no_s">You can get all sensor data for your smart home here</string>
</resources>
