<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/frame_layout_splashscreen"
    android:background="@color/white"
    tools:context=".SplashScreen" >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:src="@drawable/splash"
        android:scaleType="centerCrop"
        android:layout_gravity="center"
        android:layout_marginBottom="50dp"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginBottom="50dp"
        android:layout_gravity="bottom">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="8dp"
            android:text="@string/app_name"
            android:textSize="45sp"
            android:textStyle="bold"
            android:textColor="@color/dark_gray"
            />
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/app_version"
                android:textColor="@color/light_gray"
                android:textSize="12sp"/>
            <ProgressBar
                style="?android:attr/progressBarStyleHorizontal"
                android:layout_width="1dp"
                android:layout_height="15dp"
                android:layout_margin="4dp"
                android:progressDrawable="@drawable/progress_drawable_vertical"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                android:text="@string/copyright"
                android:textColor="@color/light_gray"
                android:textSize="12sp"/>
        </LinearLayout>
    </LinearLayout>
</FrameLayout>