<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="100dp">
    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:layout_margin="8dp"
        android:id="@+id/nnm_view"
        android:onClick="onClick"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nm"
                android:textSize="18sp"
                android:textColor="@color/light_black"/>
            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/user_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/gray"
                />
            <ImageView
                android:layout_marginLeft="8dp"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/edit_dark" />

        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="55dp"
        android:layout_margin="4dp"
        android:onClick="onClick"
        android:id="@+id/email_view"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center"
            android:layout_margin="8dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/eml"
                android:textSize="18sp"
                android:textColor="@color/light_black"/>
            <TextView
                android:layout_marginLeft="8dp"
                android:id="@+id/email_text"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:textColor="@color/gray"
                />
            <ImageView
                android:layout_marginLeft="8dp"
                android:layout_gravity="center"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/edit_dark" />
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/chpass_view"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="4dp"
        >

        <Button
            android:onClick="onClick"
            android:id="@+id/pass_edit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/change_pass"
            android:background="@color/light_white"
            android:textColor="@color/gray"/>

    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_margin="4dp"
        >

            <Button
                android:onClick="onClick"
                android:id="@+id/logout_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

    </android.support.v7.widget.CardView>

</LinearLayout>